GL/src/test/deca/context/valid/deca_sans_objet/initExpr.deca
// Description:
//    test d'initialisation 
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

{
        int x = 2 + 5 ;
}